move final elements to special block

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       <a class="restart-button">New Game</a>
     </div>
 
+    <div class="final-wrapper">
+        <div class="arrow_up"></div>
+        <div class="final-container"><ul style="margin-top: -12px;"></ul></div>
+        <div class="arrow_down"></div>
+    </div>
+
     <div class="game-container">
       <div class="game-message">
         <p></p>
