--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
   <script src="data/base.js"></script>
   <script src="data/names.js"></script>
+  <script src="data/images.js"></script>
   <script src="js/bind_polyfill.js"></script>
   <script src="js/classlist_polyfill.js"></script>
   <script src="js/animframe_polyfill.js"></script>
